week one assignment

--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title> MURUNGI INNOCENT | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>MURUNGI INNOCENT | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello my name is Murungi Innocent" width="200">
+        <p>My name is Murungi Innocent is a creative and tech-driven individual with a passion for
+            programming, automation, and visual editing. He enjoys crafting hacker-style PC setups
+            and producing TikTok-style car edits under the brand Inno Edits. Always eager to learn,
+            he’s diving deeper into Python for web development, data science, and AI.
+            Focused and curious, Innocent combines creativity with technical skill to bring his ideas to life.</p>
+    </main>
+
+
+
+
+    <footer>
+        @2025 murungi innocent all rights reserved😎😎😎
+    </footer>
+
+
 </body>
+
 </html>
