--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <main>
         <h1>MURUNGI INNOCENT | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello my name is Murungi Innocent" width="200">
-        <p>My name is Murungi Innocent is a creative and tech-driven individual with a passion for
-            programming, automation, and visual editing. He enjoys crafting hacker-style PC setups
+        <p>My name is Murungi Innocent a creative and tech-driven individual with a passion for
+            programming, automation, and visual editing. I enjoy crafting hacker-style PC setups
             and producing TikTok-style car edits under the brand Inno Edits. Always eager to learn,
-            he’s diving deeper into Python for web development, data science, and AI.
-            Focused and curious, Innocent combines creativity with technical skill to bring his ideas to life.</p>
+            I am diving deeper into Python for web development, data science, and AI.
+            Focused and curious, I combine creativity with technical skill to bring my ideas to life.</p>
     </main>
 
 
