Home page enhancement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> MURUNGI INNOCENT | WDD 130</title>
+    <meta name="description"
+        content="Describe your home page here using keywords like your name, the course, the purpose of the page.">
+    <meta name="author" content="MURUNGI INNOCENT">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
@@ -23,6 +27,14 @@
             I am diving deeper into Python for web development, data science, and AI.
             Focused and curious, I combine creativity with technical skill to bring my ideas to life.</p>
     </main>
+    <aside>
+        <h2>Kampala</h2>
+        <img src="images/kampala-ugaanda.jpg" alt="kampala city">
+        <p>Kampala is the capital city of Uganda and one of the fastest-growing urban centers in East Africa. It is
+            located in the
+            central region of the country, built across several rolling hills near the shores of Lake Victoria. The city
+            known for its energy and diversity</p>
+    </aside>
 
 
 
