--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">Rafting Website</a>
+            <a href="index.html">Home</a>
+            <a href="wwr/about.html">Rafting Website</a>
             <a href="https://linkedin.com."></a>
             <a href="https://facebook.com."></a>
         </nav>
