--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,25 +29,26 @@
     </header>
     <main>
 
-        <!-- HERO SECTION -->
         <div class="hero">
-            <h1><b>White Water Rafting Co.</b></h1>
+            <h1>White Water Rafting co.</h1>
+        </div>
+        <div class="About">
+            <h2>About</h2>
+            <article>
+                <img class="about-img" src="assets/rafting60_1024.jpg" alt=" Rafting Clients" class="clients-img">
+
+                <p>
+                    Our mission is to bring unforgettable adventure, teamwork, and excitement
+                    to every river journey we offer. We value safety, fun, and the spirit of
+                    exploration.
+                </p>
+            </article>
         </div>
 
-        <article>
-            <img class="article-img" src="assets/rafting60_1024.jpg" alt="clients" class="clients">
-            <h2>About Us</h2>
-            <p>
-                <b>Our mission</b> is to bring unforgettable adventure, teamwork, and excitement
-                to every river journey we offer. We value safety, fun, and the spirit of
-                exploration.
-            </p>
-
-        </article>
 
         <!-- HISTORY SECTION -->
         <section>
-            <h2>History</h2>
+            <h2 class="box"><b>History</b></h2>
             <p>
                 Founded many years ago, our company has grown from a small river crew to a
                 leading adventure provider. Through passion, courage, and a love of nature,
@@ -56,8 +57,8 @@
         </section>
 
         <!-- ADVENTURE AWAITS SECTION -->
-        <section>
-            <h2>Adventure Awaits You!</h2>
+        <section class="box">
+            <h2><b>Adventure Awaits You!</b></h2>
             <!-- images will be added later -->
         </section>
 
