wwr-week 3 changes

--- a/index.html
+++ b/index.html
@@ -16,38 +16,40 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="wwr/about.html">Rafting Website</a>
-            <a href="https://linkedin.com."></a>
-            <a href="https://facebook.com."></a>
+            <a href="https://linkedin.com.">linkedin</a>
+            <a href="https://facebook.com.">facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>MURUNGI INNOCENT | WDD 130</h1>
-        <img class="images" src="images/profile.jpg" alt="Hello my name is Murungi Innocent" width="200">
-        <p>My name is Murungi Innocent a creative and tech-driven individual with a passion for
-            programming, automation, and visual editing. I enjoy crafting hacker-style PC setups
-            and producing TikTok-style car edits under the brand <B>CipherGlitch</B>. Always eager to learn,
-            I am diving deeper into Python for web development, data science, and AI.
-            Focused and curious, I combine creativity with technical skill to bring my ideas to life.</p>
+    <div class="grid">
+        <main>
+            <h1>MURUNGI INNOCENT | WDD 130</h1>
+            <img class="images" src="images/profile.jpg" alt="Hello my name is Murungi Innocent" width="200">
+            <p>My name is Murungi Innocent a creative and tech-driven individual with a passion for
+                programming, automation, and visual editing. I enjoy crafting hacker-style PC setups
+                and producing TikTok-style car edits under the brand <B>CipherGlitch</B>. Always eager to learn,
+                I am diving deeper into Python for web development, data science, and AI.
+                Focused and curious, I combine creativity with technical skill to bring my ideas to life.</p>
 
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/barcelona-spain-temple?lang=eng"
-                    target="_blank">Barcelona spain Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/birmingham-england-temple?lang=eng"
-                    target="_blank">Paris
-                    Birmingham-england Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple"
-                    target="_blank">Berlin Germany Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Kampala</h2>
-        <img src="images/kampala-ugaanda.jpg" alt="kampala city">
-        <p>Kampala is the capital city of Uganda and one of the fastest-growing urban centers in East Africa. It is
-            located in the
-            central region of the country, built across several rolling hills near the shores of Lake Victoria. The city
-            known for its energy and diversity</p>
-    </aside>
-
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/barcelona-spain-temple?lang=eng"
+                        target="_blank">Barcelona spain Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/birmingham-england-temple?lang=eng"
+                        target="_blank">Paris
+                        Birmingham-england Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple"
+                        target="_blank">Berlin Germany Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Kampala</h2>
+            <img src="images/kampala-ugaanda.jpg" alt="kampala city">
+            <p>Kampala is the capital city of Uganda and one of the fastest-growing urban centers in East Africa. It is
+                located in the
+                central region of the country, built across several rolling hills near the shores of Lake Victoria. The
+                city
+                known for its energy and diversity</p>
+        </aside>
+    </div>
 
 
 
