--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,80 +14,88 @@
 
 <body>
 
-
-    <header>
-        <img class="logo" id="logo1" src="assets/z-splash.png">
-        <!--navigation links-->
-        <nav>
+    <header class="header">
+        <div class="logo">
+            <img src="images/z-splash.png" alt="logo">
+        </div>
+        <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
-    <main>
 
-        <div class="hero">
-            <h1>White Water Rafting co.</h1>
-        </div>
-        <div class="About">
-            <h2>About</h2>
-            <article>
-                <img class="about-img" src="assets/rafting60_1024.jpg" alt=" Rafting Clients" class="clients-img">
+    <header>
 
+        <main>
+            <div class="hero">
+                <img class="hero-back" src="images/rafting10_1024hero.jpg" alt="Hero background">
+                <h1><b> WHITE WATER RAFTING CO.</b></h1>
+                <article>
+                    <h2>ABOUT US</h2>
+                    <img class="hero_img" src="images/rafting59_600clients.jpg" alt="happy_clients">
+                    <p>
+                        At White Water Rafting, we celebrate the power of nature, our mission is to inspire
+                        fearless exploration, and create unforgettable rafting experiences.
+                        Driven by our creed of courage and unity, we strive to guide every adventurer
+                        toward new horizons. “Ride the current. Find your flow.”
+                    </p>
+                </article>
+
+            </div>
+
+            </div>
+            <!-- HISTORY SECTION -->
+            <section>
+                <h2 class="box"><b>History</b></h2>
                 <p>
-                    Our mission is to bring unforgettable adventure, teamwork, and excitement
-                    to every river journey we offer. We value safety, fun, and the spirit of
-                    exploration.
+                    Founded many years ago, our company has grown from a small river crew to a
+                    leading adventure provider. Through passion, courage, and a love of nature,
+                    we continue to offer thrilling rafting experiences.
                 </p>
-            </article>
-        </div>
+            </section>
 
+            <!-- ADVENTURE AWAITS SECTION -->
+            <section class="box">
+                <h2><b>Adventure Awaits You!</b></h2>
+                <!-- images will be added later -->
+            </section>
 
-        <!-- HISTORY SECTION -->
-        <section>
-            <h2 class="box"><b>History</b></h2>
-            <p>
-                Founded many years ago, our company has grown from a small river crew to a
-                leading adventure provider. Through passion, courage, and a love of nature,
-                we continue to offer thrilling rafting experiences.
-            </p>
-        </section>
+        </main>
 
-        <!-- ADVENTURE AWAITS SECTION -->
-        <section class="box">
-            <h2><b>Adventure Awaits You!</b></h2>
-            <!-- images will be added later -->
-        </section>
+        <!-- FOOTER -->
+        <footer>
 
-    </main>
+            <p>&copy; 2025 White Water Rafting Co. | MURUNGI INNOCENT</p>
 
-    <!-- FOOTER -->
-    <footer>
-        <p>&copy; 2025 White Water Rafting Co. | MURUNGI INNOCENT</p>
+            <nav class="socialmedia">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
+                </ul>
+                <a href="https://facebook.com">
+                    <img src="images/FACEBOOK.png" alt="Facebook">
+                </a>
 
-        <nav class="socialmedia">
-            <a href="https://facebook.com">
-                <img src="assets/FACEBOOK.png" alt="Facebook">
-            </a>
+                <a href="https://twitter.com">
+                    <img src="images/New twitter(X).png" alt="X">
+                </a>
 
-            <a href="https://twitter.com">
-                <img src="assets/X.png" alt="Twitter">
-            </a>
+                <a href="https://Twitter.com">
+                    <img src="images/TWITTER.png" alt="Twitter">
+                </a>
 
-            <a href="https://Twitter.com">
-                <img src="assets/TWITTER.png" alt="Instagram">
-            </a>
+                <a href="https://instagram.com">
+                    <img src="images/INSTA.png" alt="Instagram">
+                </a>
+            </nav>
+        </footer>
 
-            <a href="https://instagram.com">
-                <img src="assets/INSTA.png" alt="Instagram">
-            </a>
-        </nav>
-    </footer>
-
-</body>
 </body>
 
 </html>
