--- a/wwr/about.html
+++ b/wwr/about.html
@@ -79,7 +79,7 @@
                     <li><a href="contact.html">Contact us</a></li>
                 </ul>
                 <a href="https://facebook.com">
-                    <img src="images/FACEBOOK.png" alt="Facebook">
+                    <img src="images/facebook.png" alt="Facebook">
                 </a>
 
                 <a href="https://twitter.com">
@@ -87,11 +87,11 @@
                 </a>
 
                 <a href="https://Twitter.com">
-                    <img src="images/TWITTER.png" alt="Twitter">
+                    <img src="images/twitter.png" alt="Twitter">
                 </a>
 
                 <a href="https://instagram.com">
-                    <img src="images/INSTA.png" alt="Instagram">
+                    <img src="images/instagram.png" alt="Instagram">
                 </a>
             </nav>
         </footer>
