--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,86 +14,123 @@
 
 <body>
 
-    <header class="header">
-        <div class="logo">
-            <img src="images/z-splash.png" alt="logo">
+    <header>
+        <img src="images/z-splash.png" alt="Logo" class="logo">
+
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="tours.html">Tours</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+    <main>
+        <div class="hero">
+            <img class="hero-back" src="images/rafting10_1024hero.jpg" alt="Hero background">
+            <h1><b> WHITE WATER RAFTING CO.</b></h1>
+            <article>
+                <h2>ABOUT US</h2>
+                <img class="hero_img" src="images/rafting59_600clients.jpg" alt="happy_clients">
+                <p>
+                    At White Water Rafting, we celebrate the power of nature, our mission is to inspire
+                    fearless exploration, and create unforgettable rafting experiences.
+                    Driven by our creed of courage and unity, we strive to guide every adventurer
+                    toward new horizons. “Ride the current. Find your flow.”
+                </p>
+            </article>
+
         </div>
-        <nav class="nav">
+
+        <!-- HISTORY SECTION -->
+        <section class="history">
+            <h2><b>History</b></h2>
+            <div class="history-grid">
+                <p>
+                    Founded many years ago, our company has grown from a small river crew to a
+                    leading adventure provider. Through passion, courage, and a love of nature,
+                    we continue to offer thrilling rafting experiences.
+                </p>
+
+                <img src="images/rafting26_600history.jpg" alt="history-img">
+
+                <p>
+                    Founded many years ago, our company has grown from a small river crew to a
+                    leading adventure provider. Through passion, courage, and a love of nature,
+                    we continue to offer thrilling rafting experiences.
+                </p>
+            </div>
+        </section>
+
+        <!-- ADVENTURE AWAITS SECTION -->
+        <section class="adventure">
+            <h2><b>Adventure Awaits You!</b></h2>
+
+            <div class="adventure-grid">
+
+                <figure>
+                    <img src="images/rafting22_600equipments.jpg" alt="equipments">
+                    <figcaption>equipments</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/rafting59_600clients.jpg" alt="clients">
+                    <figcaption>clients</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/rafting47_600effort-trip.jpg" alt="effort trip">
+                    <figcaption>effort trip</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/rafting4_600client.jpg" alt="calm trip">
+                    <figcaption>calm trip</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/rafting29_600level.jpg" alt="Level Five Rapids">
+                    <figcaption>Level Five Rapids</figcaption>
+                </figure>
+
+            </div>
+        </section>
+
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+
+        <p>&copy; 2025 White Water Rafting Co. | MURUNGI INNOCENT</p>
+
+        <nav class="socialmedia">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="trips.html">Trips</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
+            <a href="https://facebook.com">
+                <img src="images/facebook.png" alt="Facebook">
+            </a>
+
+            <a href="https://twitter.com">
+                <img src="images/newtwitter.png" alt="X">
+            </a>
+
+            <a href="https://Twitter.com">
+                <img src="images/twitter.png" alt="Twitter">
+            </a>
+
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="Instagram">
+            </a>
         </nav>
-    </header>
-
-    <header>
-
-        <main>
-            <div class="hero">
-                <img class="hero-back" src="images/rafting10_1024hero.jpg" alt="Hero background">
-                <h1><b> WHITE WATER RAFTING CO.</b></h1>
-                <article>
-                    <h2>ABOUT US</h2>
-                    <img class="hero_img" src="images/rafting59_600clients.jpg" alt="happy_clients">
-                    <p>
-                        At White Water Rafting, we celebrate the power of nature, our mission is to inspire
-                        fearless exploration, and create unforgettable rafting experiences.
-                        Driven by our creed of courage and unity, we strive to guide every adventurer
-                        toward new horizons. “Ride the current. Find your flow.”
-                    </p>
-                </article>
-
-            </div>
-
-            <!-- HISTORY SECTION -->
-            <section>
-                <h2 class="box"><b>History</b></h2>
-                <p>
-                    Founded many years ago, our company has grown from a small river crew to a
-                    leading adventure provider. Through passion, courage, and a love of nature,
-                    we continue to offer thrilling rafting experiences.
-                </p>
-            </section>
-
-            <!-- ADVENTURE AWAITS SECTION -->
-            <section class="box">
-                <h2><b>Adventure Awaits You!</b></h2>
-                <!-- images will be added later -->
-            </section>
-
-        </main>
-
-        <!-- FOOTER -->
-        <footer>
-
-            <p>&copy; 2025 White Water Rafting Co. | MURUNGI INNOCENT</p>
-
-            <nav class="socialmedia">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="trips.html">Trips</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
-                </ul>
-                <a href="https://facebook.com">
-                    <img src="images/facebook.png" alt="Facebook">
-                </a>
-
-                <a href="https://twitter.com">
-                    <img src="images/Newtwitter(X).png" alt="X">
-                </a>
-
-                <a href="https://Twitter.com">
-                    <img src="images/twitter.png" alt="Twitter">
-                </a>
-
-                <a href="https://instagram.com">
-                    <img src="images/instagram.png" alt="Instagram">
-                </a>
-            </nav>
-        </footer>
+    </footer>
 
 </body>
 
