--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,7 +33,7 @@
         <div class="hero">
             <img class="hero-back" src="images/rafting10_1024hero.jpg" alt="Hero background">
             <h1><b> WHITE WATER RAFTING CO.</b></h1>
-            <article>
+            <article class="article">
                 <h2>ABOUT US</h2>
                 <img class="hero_img" src="images/rafting59_600clients.jpg" alt="happy_clients">
                 <p>
