--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,7 +32,7 @@
     <main>
         <div class="hero">
             <img class="hero-back" src="images/rafting10_1024hero.jpg" alt="Hero background">
-            <h1><b> WHITE WATER RAFTING CO.</b></h1>
+            <h1><b> White Water Rafting Co.</b></h1>
             <article class="article">
                 <h2>ABOUT US</h2>
                 <img class="hero_img" src="images/rafting59_600clients.jpg" alt="happy_clients">
@@ -113,7 +113,7 @@
                 <img src="images/facebook.png" alt="Facebook">
             </a>
 
-            <a href="https://Twitter.com">
+            <a href="https://twitter.com">
                 <img src="images/twitter.png" alt="Twitter">
             </a>
 
