--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,17 +15,18 @@
 <body>
 
     <header>
-        <img src="images/z-splash.png" alt="Logo" class="logo">
+        <img src="images/z-splash.png" alt="Site Logo" class="logo">
 
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="tours.html">Tours</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="trips.html">trips</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
+
 
 
 
@@ -113,13 +114,14 @@
                 <img src="images/facebook.png" alt="Facebook">
             </a>
 
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="Instagram">
+            </a>
+
             <a href="https://twitter.com">
                 <img src="images/twitter.png" alt="Twitter">
             </a>
 
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="Instagram">
-            </a>
         </nav>
     </footer>
 
