--- a/wwr/about.html
+++ b/wwr/about.html
@@ -111,7 +111,7 @@
         <nav class="socialmedia">
 
             <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="Facebook">
+                <img src="images/facebook.svg" alt="Facebook">
             </a>
 
             <a href="https://instagram.com">
