--- a/wwr/about.html
+++ b/wwr/about.html
@@ -111,7 +111,7 @@
         <nav class="socialmedia">
 
             <a href="https://facebook.com">
-                <img src="images/facebook.svg" alt="Facebook">
+                <img src="images/instagram.png" alt="Facebook">
             </a>
 
             <a href="https://instagram.com">
@@ -119,7 +119,7 @@
             </a>
 
             <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="Twitter">
+                <img src="images/instagram.png" alt="Twitter">
             </a>
 
         </nav>
