--- a/wwr/about.html
+++ b/wwr/about.html
@@ -119,7 +119,7 @@
             </a>
 
             <a href="https://twitter.com">
-                <img src="images/instagram.png" alt="Twitter">
+                <img src="images/twitter-logo_4096075.png" alt="Twitter">
             </a>
 
         </nav>
