--- a/wwr/about.html
+++ b/wwr/about.html
@@ -19,10 +19,10 @@
 
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="trips.html">trips</a></li>
-                <li><a href="contactus.html">Contact us</a></li>
+                <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
