--- a/wwr/about.html
+++ b/wwr/about.html
@@ -20,8 +20,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="trips.html">trips</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="trips.html">Trips</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
