--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -20,8 +20,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="trips.html">trips</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="trips.html">Trips</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
@@ -30,7 +30,7 @@
     <main>
 
         <address class="info">
-            <h3 class="h3"><b> White Water Rafting Company</b></h3><br>
+            <h3 class="h3"></h3> White Water Rafting Company</h3><br>
             123 Main River Street<br>
             Kolob, California<br>
             +1 999 999 9999<br>
@@ -44,7 +44,7 @@
                     width="500px" height="390" border-radius="6px" allowfullscreen="" loading="lazy">
                 </iframe>
             </div>
-            <form class="form-info">
+            <form class="form-info" id attribute: input[type="radio">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" required>
 
