--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="MURUNGI INNOCENT">
     <meta name="description"
-        content="Get in touch with White Water Rafting Company for general inquiries, reservation questions, or website suggestions. Find our contact information, map location, and contact form here.">
+        content="Get in touch with White Water Rafting Company for general inquiries, map location, and contact form here.">
     <title>Contact Us | White Water Rafting Company</title>
     <link rel="stylesheet" href="styles/rafting.css">
 
