--- a/wwr/Trips.html
+++ b/wwr/Trips.html
@@ -96,6 +96,7 @@
 
             <div class="trip-card">
                 <img class="grid" src="images/rafting15_1024calm.jpg" alt="Beginner rafting float trip">
+                <img class="grid" src="images/rafting15_1024calm.jpg" alt="Beginner rafting float trip">
                 <h3>River Breeze Float</h3>
                 <p>A calm, scenic float perfect for beginners, families, and relaxing river lovers.</p>
             </div>
