--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="wwr/about.html">Rafting Website</a>
+            <a href="wwr/index.html">Rafting Website</a>
             <a href="https://linkedin.com.">linkedin</a>
             <a href="https://facebook.com.">facebook</a>
         </nav>
