--- a/wwr/Trips.html
+++ b/wwr/Trips.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Adventures | Trips</title>
     <meta name="description" content="Explore our thrilling whitewater rafting trips for all experience levels.">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="styles/raftingss">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="trips.html">Trips</a></li>
+                <li><a href="trips.html">trips</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
