--- a/wwr/index.html
+++ b/wwr/index.html
@@ -7,7 +7,7 @@
     <title>Whitewater Rafting Adventures | Home</title>
     <meta name="description"
         content="Experience thrilling whitewater rafting adventures for all skill levels. Join us for unforgettable river experiences.">
-    <link rel="stylesheet" href="styles/raftingcss">
+    <link rel="stylesheet" href="styles/rafting.css">
 
 </head>
 
