--- a/wwr/Trips.html
+++ b/wwr/Trips.html
@@ -1,13 +1,155 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Whitewater Rafting Adventures | trips</title>
+    <meta name="description" content="Explore our thrilling whitewater rafting trips for all experience levels.">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
-    trips
+
+    <header class="head">
+        <img src="images/z-splash.png" alt="Site Logo" class="logo">
+
+        <nav class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <main>
+
+        <section class="hero">
+            <img class="hero-1" src="images/rafting10_1024hero.jpg" alt="Rafting on strong rapids">
+            <h1 class="trips">Our Rafting Trips</h1>
+            <p class="p"><b>Choose the perfect adventure for your skill level and thrill desires!</b><br>
+                <br>
+                Whitewater Rafting Adventures offers thrilling river experiences designed for every skill level, from
+                calm beginner
+                floats to challenging canyon runs. Each trip is guided by certified professionals who ensure safety
+                while keeping the
+                excitement alive. Whether you're seeking breathtaking scenery, adrenaline-pumping rapids, or a full-day
+                wilderness
+                journey, we have a trip that fits your adventure goals. Join us and discover why our rafting tours are
+                some of the most
+                unforgettable outdoor experiences you can have
+            </p>
+        </section>
+
+        <!-- TRIPS TABLE -->
+        <section class="trip-table-section">
+            <h2>Available Trips</h2>
+
+            <table class="trips-table">
+                <thead>
+                    <tr>
+                        <th>Trip Name</th>
+                        <th>Difficulty</th>
+                        <th>Duration</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>River Breeze Float</td>
+                        <td>Beginner</td>
+                        <td>2 hours</td>
+                        <td>$45</td>
+                    </tr>
+
+                    <tr>
+                        <td>Raging Rapids Challenge</td>
+                        <td>Intermediate</td>
+                        <td>4 hours</td>
+                        <td>$80</td>
+                    </tr>
+
+                    <tr>
+                        <td>Extreme Canyon Run</td>
+                        <td>Advanced</td>
+                        <td>6 hours</td>
+                        <td>$120</td>
+                    </tr>
+
+                    <tr>
+                        <td>Full-Day Wilderness Expedition</td>
+                        <td>All Levels</td>
+                        <td>8 hours</td>
+                        <td>$160</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <!-- TRIP CARDS SECTION -->
+        <section class="trips-cards">
+            <h2>Trip Highlights</h2>
+
+            <div class="trip-card">
+                <img class="grid" src="images/rafting15_1024calm.jpg" alt="Beginner rafting float trip">
+                <img class="grid" src="images/rafting15_1024calm.jpg" alt="Beginner rafting float trip">
+                <h3>River Breeze Float</h3>
+                <p>A calm, scenic float perfect for beginners, families, and relaxing river lovers.</p>
+            </div>
+
+            <div class="trip-card">
+                <img class="grid" src="images/rafting29_600level.jpg" alt="Intermediate rafting adventure">
+                <h3>Raging Rapids Challenge</h3>
+                <p>A fun and thrilling ride down energetic rapids for those with some rafting experience.</p>
+            </div>
+
+            <div class="trip-card">
+                <img class="grid" src="images/rafting65_600clear.jpg" alt="Advanced canyon rafting">
+                <h3>Extreme Canyon Run</h3>
+                <p>An intense and adrenaline-filled journey through narrow canyon rapids.</p>
+            </div>
+
+            <div class="trip-card">
+                <img class="grid" src="images/rafting58_600color.jpg" alt="Full day rafting experience">
+                <h3>Full-Day Wilderness Expedition</h3>
+                <p>A full-day adventure featuring rapids, calm stretches, swimming areas, and lunch.</p>
+            </div>
+
+        </section>
+
+        <!-- CTA BACK TO CONTACT -->
+        <section class="book-now">
+            <h2>Ready to Book Your Trip?</h2>
+            <p>Contact us to reserve your spot for an unforgettable rafting adventure.</p>
+            <a href="contact.html" class="cta-button">Book Now</a>
+        </section>
+
+    </main>
+    <footer>
+
+        <p>&copy; 2025 White Water Rafting Co. | MURUNGI INNOCENT</p>
+
+        <nav class="socialmedia">
+
+            <a href="https://facebook.com">
+                <img src="images/facebook-icon.png" alt="Facebook">
+            </a>
+
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="Instagram">
+            </a>
+
+            <a href="https://twitter.com">
+                <img src="images/twitter-logo_4096075.png" alt="Twitter">
+            </a>
+
+        </nav>
+    </footer>
+
 </body>
 
 </html>
