--- a/wwr/Trips.html
+++ b/wwr/Trips.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Adventures | trips</title>
+    <title>Trips</title>
     <meta name="description" content="Explore our thrilling whitewater rafting trips for all experience levels.">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
