--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -22,6 +22,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="wwr/trips.html">Trips</a></li>
+                <li><a href="wwr/trips-1.html">Trips t</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
