--- a/wwr/index.html
+++ b/wwr/index.html
@@ -20,8 +20,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="wwr/trips.html">Trips</a></li>
-                <li><a href="wwr/trips-1.html">Trips t</a></li>
+                <li><a href="trips.html">Trips</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
