--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -37,7 +37,7 @@
                     calm beginner
                     floats to challenging canyon runs. Each trip is guided by certified professionals who ensure safety
                     while keeping the
-                    excitement alive. Whether you're seeking breathtaking scenery, adrenaline-pumping rapids, or a
+                    excitement alive. Whether you're seeking breathtaking scenery, or a
                     full-day
                     wilderness
                     journey, we have a trip that fits your adventure goals. Join us and discover why our rafting tours
