--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -132,7 +132,7 @@
             </section>
 
         </main>
-        <footer>
+        <footer class="footer">
 
             <p>&copy; 2025 White Water Rafting Co. | MURUNGI INNOCENT</p>
 
