--- a/wwr/Trips.html
+++ b/wwr/Trips.html
@@ -103,11 +103,13 @@
 
             <div class="trip-card">
                 <img class="grid" src="images/rafting29_600level.jpg" alt="Intermediate rafting adventure">
+                <img class="grid" src="images/rafting65_600clear.jpg" alt="Advanced canyon rafting">
                 <h3>Raging Rapids Challenge</h3>
                 <p>A fun and thrilling ride down energetic rapids for those with some rafting experience.</p>
             </div>
 
             <div class="trip-card">
+                <img class="grid" src="images/rafting65_600clear.jpg" alt="Advanced canyon rafting">
                 <img class="grid" src="images/rafting65_600clear.jpg" alt="Advanced canyon rafting">
                 <h3>Extreme Canyon Run</h3>
                 <p>An intense and adrenaline-filled journey through narrow canyon rapids.</p>
@@ -115,6 +117,7 @@
 
             <div class="trip-card">
                 <img class="grid" src="images/rafting58_600color.jpg" alt="Full day rafting experience">
+                <img class="grid" src="images/rafting29_600level.jpg" alt="Intermediate rafting adventure">
                 <h3>Full-Day Wilderness Expedition</h3>
                 <p>A full-day adventure featuring rapids, calm stretches, swimming areas, and lunch.</p>
             </div>
