--- a/wwr/index.html
+++ b/wwr/index.html
@@ -78,7 +78,7 @@
     </main>
 
     <!-- FOOTER -->
-    <footer>
+    <footer class="footer">
 
         <p>&copy; 2025 White Water Rafting Co. | MURUNGI INNOCENT</p>
 
