--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -2,15 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trips</title>
     <meta name="description" content="Explore our thrilling whitewater rafting trips for all experience levels.">
-    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
-
     <header class="head">
         <img src="images/z-splash.png" alt="Site Logo" class="logo">
 
@@ -24,11 +22,10 @@
         </nav>
     </header>
 
-
     <main>
 
         <section class="hero">
-            <img class="hero-1" src="images/rafting10_1024hero.jpg" alt="Rafting on strong rapids">
+            <img class="hero-1" src="images/rafting10_1024hero.jpg" alt="rafting on strong rapids">
             <h1 class="trips">Our Rafting Trips</h1>
             <p class="p"><b>Choose the perfect adventure for your skill level and thrill desires!</b><br>
                 <br>
@@ -43,7 +40,6 @@
                 unforgettable outdoor experiences you can have
             </p>
         </section>
-
         <!-- TRIPS TABLE -->
         <section class="trip-table-section">
             <h2>Available Trips</h2>
@@ -130,12 +126,10 @@
             <p>Contact us to reserve your spot for an unforgettable rafting adventure.</p>
             <a href="contact.html" class="cta-button">Book Now</a>
         </section>
-
     </main>
     <footer>
 
         <p>&copy; 2025 White Water Rafting Co. | MURUNGI INNOCENT</p>
-
         <nav class="socialmedia">
 
             <a href="https://facebook.com">
