--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trips</title>
     <meta name="description" content="Explore our thrilling whitewater rafting trips for all experience levels.">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
