--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trips</title>
+    <title>Trips | White Water Rafting Company</title>
     <meta name="description" content="Explore our thrilling whitewater rafting trips for all experience levels.">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -93,7 +93,7 @@
 
             <div class="trip-card">
                 <img class="grid" src="images/rafting15_1024calm.jpg" alt="Beginner rafting float trip">
-                <img class="grid" src="images/rafting15_1024calm.jpg" alt="Beginner rafting float trip">
+                <img class="grid" src="images/rafting29_600level.jpg" alt="Beginner rafting float trip">
                 <h3>River Breeze Float</h3>
                 <p>A calm, scenic float perfect for beginners, families, and relaxing river lovers.</p>
             </div>
